# aphelion-agent-security-framework

./: .gitignore  CONTRIBUTING.md  README.md  amend_commit_author.sh  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
config/: rbac_model.conf  rbac_policy.csv
docs/: aphelion_analysis.md  aphelion_kanban_tickets_guide.md  developer_guide.md  project_analysis.md
src/aphelion/: __init__.py  config.py  main.py
src/aphelion/auth/: __init__.py  jwt.py
src/aphelion/authz/: __init__.py  casbin_enforcer.py
src/aphelion/frameworks/: __init__.py
src/aphelion/frameworks/fastapi/: __init__.py  middleware.py
tests/: test_config.py  test_main.py
tests/auth/: __init__.py  test_jwt.py
tests/authz/: __init__.py  test_casbin_enforcer.py
tests/frameworks/: __init__.py
tests/frameworks/fastapi/: __init__.py  test_middleware.py
tests/security/: __init__.py  test_fuzzing_examples.py
